--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="styles2.css">
     <title>Restuarant page</title>
 </head>
 
@@ -116,9 +116,9 @@
       
    
 <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="jquery.slim.min.js"></script>
+    <script src="popper.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 
 </body>
 
