--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</button>
 			 
 						<div class=" collapse navbar-collapse "id="menubar">
-							<ul class="nav navbar-nav navbar-right">
+							<ul class="nav navbar-nav navbar-right" id="nav">
 							<li><a class="menustyle   href="#chicken">chicken</a></li>
 							<li><a  class="menustyle  href="#beef" ">beef</a></li>
 							<li><a   class="menustyle  href="#sushi" ">sushi</a></li>
