--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			 
 						<div class=" collapse navbar-collapse "id="menubar">
 							<ul class="nav navbar-nav navbar-right" id="nav">
-							<li><a class="menustyle ">chicken</a></li>
-							<li><a  class="menustyle ">beef</a></li>
-							<li><a   class="menustyle ">sushi</a></li>
+							<li><a class="menustyle " href="#chicken">chicken</a></li>
+							<li><a  class="menustyle " href="#beef">beef</a></li>
+							<li><a   class="menustyle " href="#sushi">sushi</a></li>
 							</ul>
 						</div>
 			 </div>
@@ -44,7 +44,7 @@
 	  
 	        <div class="col-lg-12 col-12 col-centered">
 			 
-			  <p class="text-center">Chicken</p>
+			  <p class="text-center" id="chicken">Chicken</p>
 			   <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eros velit, tincidunt eu lorem quis, ultrices ultrices est. Vivamus semper lacus massa,
 			   vel feugiat orci maximus nec. Nunc
  ullamcorper, orci vel sodales bibendum, sapien nibh vulputate ligula, sit amet bibendum tortor enim id nunc. 
@@ -71,7 +71,7 @@
       <div class="row">
 	        <div class="col-lg-12 col-12 offset-2">
 			
-			 <p class="text-center">Beef</p>
+			 <p class="text-center"id="beef">Beef</p>
 			   <p  >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eros velit, tincidunt eu lorem quis, ultrices ultrices est. Vivamus semper lacus massa, vel feugiat orci maximus nec. Nunc
  ullamcorper, orci vel sodales bibendum, sapien nibh vulputate ligula, sit amet bibendum tortor enim id nunc. Nam fringilla eget sapien vitae rutrum. Fusce pretium sem vel velit sodales,
  at cursus urna ornare. Vestibulum luctus tortor et dui eleifend faucibus. Fusce mi nisi, euismod in elit ut, consectetur cursus lectus. Donec dignissim feugiat magna in volutpat Nullam 
@@ -94,7 +94,7 @@
 	  
 	        <div class="col-lg-12 col-12 offset-2">
 		
-			 <p class="text-center">Sushi</p>
+			 <p class="text-center" id="sushi">Sushi</p>
 			   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eros velit, tincidunt eu lorem quis, ultrices ultrices est. Vivamus semper lacus massa, vel feugiat orci maximus nec. Nunc
  ullamcorper, orci vel sodales bibendum, sapien nibh vulputate ligula, sit amet bibendum tortor enim id nunc. Nam fringilla eget sapien vitae rutrum. Fusce pretium sem vel velit sodales,
  at cursus urna ornare. Vestibulum luctus tortor et dui eleifend faucibus. Fusce mi nisi, euismod in elit ut, consectetur cursus lectus. Donec dignissim feugiat magna in volutpat Nullam 
